[tool.poetry]
name = "aikami"
version = "0.1.0"
description = ""
authors = ["BearlySleeping <bearlyzleeping@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
setuptools = "^70.1.0"

[tool.poetry.group.dev.dependencies]
gdtoolkit = "4.*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
